ros_ws/log/build_2025-03-18_19-46-40/auto_break/stdout_stderr.log
running egg_info
creating ../../build/auto_break/task1.egg-info
writing ../../build/auto_break/task1.egg-info/PKG-INFO
writing dependency_links to ../../build/auto_break/task1.egg-info/dependency_links.txt
writing entry points to ../../build/auto_break/task1.egg-info/entry_points.txt
writing requirements to ../../build/auto_break/task1.egg-info/requires.txt
writing top-level names to ../../build/auto_break/task1.egg-info/top_level.txt
writing manifest file '../../build/auto_break/task1.egg-info/SOURCES.txt'
reading manifest file '../../build/auto_break/task1.egg-info/SOURCES.txt'
writing manifest file '../../build/auto_break/task1.egg-info/SOURCES.txt'
running build
running build_py
creating /apollo/ros_ws/build/auto_break/build/lib/task1
copying task1/break_if_obstacle.py -> /apollo/ros_ws/build/auto_break/build/lib/task1
copying task1/__init__.py -> /apollo/ros_ws/build/auto_break/build/lib/task1
running install
running install_lib
creating /apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1
copying /apollo/ros_ws/build/auto_break/build/lib/task1/break_if_obstacle.py -> /apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1
copying /apollo/ros_ws/build/auto_break/build/lib/task1/__init__.py -> /apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1
byte-compiling /apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1/break_if_obstacle.py to break_if_obstacle.cpython-310.pyc
  File "/apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1/break_if_obstacle.py", line 119
    while (stop = False):
           ^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

byte-compiling /apollo/ros_ws/install/auto_break/lib/python3.10/site-packages/task1/__init__.py to __init__.cpython-310.pyc
running install_data
error: can't copy 'resource/task1': doesn't exist or not a regular file
